Closed Bug 1256956 Opened 8 years ago Closed 8 years ago

Silence some GCC warnings again

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: jorendorff, Assigned: jorendorff)

Details

Attachments

(1 file)

      No description provided.
Attachment #8730876 - Flags: review?(luke)
Assignee: nobody → jorendorff
Status: NEW → ASSIGNED
Comment on attachment 8730876 [details] [diff] [review]
Silence some GCC warnings

Could you please (at least in src/asmjs) remove all the '// silence GCC warning's?  We generally don't put those in since it's like adding insult after injury :)  We also just know not to remove the spurious initializations b/c it's probably silencing a warning.
Attachment #8730876 - Flags: review?(luke) → review+
https://hg.mozilla.org/mozilla-central/rev/fdd1faf35dbf
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.