Bug 1256956 - Silence some GCC warnings. r=luke.